InternexDev_Sandbox/src/objects/Capital_Provider__c.object
<CustomObject>
    <fields>
        <fullName>Business_Transaction_Date__c</fullName>
        <formula>$Setup.BusinessTransactionDate__c.Business_Transaction_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Portal_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Portal External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Market_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Market Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <label>Capital Provider</label>
    <nameField>
        <label>Capital Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capital Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>